# mlops-cloud-project-mlops_7

./: .dockerignore  .env.example  .env.exmaple  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: docker-image-airflow.yml  docker-image-api.yml  docker-image.yml
airflow/: Dockerfile
airflow/config/: default_args.py  keys.py
airflow/dags/: ahyeon_airflow_dag.py  ahyeon_automated_pipeline.py  ahyeon_pythonic_dag.py  automated_pipeline.py  data_pipeline.py
airflow/tasks/: collect.py  data.py  eval.py  preprocess.py  save_best_model.py  test.py  train.py
api/: Dockerfile  inference.py  main.py  prdict.py  predict.py
docs/: asos_data_columns.md  asos_data_columns_nan_info.md
notebooks/: data-pipeline.ipynb  data_pipeline.ipynb  notebook_template.ipynb  seunghyun_weather_api.ipynb
notebooks/imnaagyeong/: 01_weather_s3_api_test.ipynb  02_weather_data_loader.ipynb  03_weather_eda_preprocessin copy.ipynb  04_weather_model_train_evaluate.ipynb
notebooks/minju/: minju_data_pipeline.ipynb  minju_kma_dat_eda_17.ipynb  minju_kma_data_collect.ipynb
notebooks/naagyeong/: 02_weather_data_loader.ipynb  03_weather_eda_preprocessin.ipynb  04_weather_model_train_evaluate.ipynb  05_weather_model_train_evaluate.ipynb
notebooks/preprocessing/: minju_kma_dat_eda_17.ipynb  minju_kma_data_collect.ipynb  minju_kma_data_eda_total.ipynb
notebooks/seunghyun/: seunghyun_weather_api.ipynb
notebooks/yuiyeong/: eda.ipynb  poc_automated_pipeline.ipynb  (+2 more)
(+51 files in other folders)
